add_executable(romulus_timestep_tests core/timestep_tests.cpp)
target_link_libraries(romulus_timestep_tests PRIVATE romulus::core)
add_test(NAME romulus_timestep_tests COMMAND romulus_timestep_tests)

add_executable(romulus_data_root_tests data/data_root_tests.cpp)
target_link_libraries(romulus_data_root_tests PRIVATE romulus::data)
add_test(NAME romulus_data_root_tests COMMAND romulus_data_root_tests)

add_executable(romulus_file_inventory_tests data/file_inventory_tests.cpp)
target_link_libraries(romulus_file_inventory_tests PRIVATE romulus::data)
add_test(NAME romulus_file_inventory_tests COMMAND romulus_file_inventory_tests)

add_executable(romulus_binary_reader_tests data/binary_reader_tests.cpp)
target_link_libraries(romulus_binary_reader_tests PRIVATE romulus::data)
add_test(NAME romulus_binary_reader_tests COMMAND romulus_binary_reader_tests)

add_executable(romulus_file_loader_tests data/file_loader_tests.cpp)
target_link_libraries(romulus_file_loader_tests PRIVATE romulus::data)
add_test(NAME romulus_file_loader_tests COMMAND romulus_file_loader_tests)

add_executable(romulus_binary_probe_tests data/binary_probe_tests.cpp)
target_link_libraries(romulus_binary_probe_tests PRIVATE romulus::data)
add_test(NAME romulus_binary_probe_tests COMMAND romulus_binary_probe_tests)

add_executable(romulus_palette_tests data/palette_tests.cpp)
target_link_libraries(romulus_palette_tests PRIVATE romulus::data)
add_test(NAME romulus_palette_tests COMMAND romulus_palette_tests)

add_executable(romulus_indexed_image_tests data/indexed_image_tests.cpp)
target_link_libraries(romulus_indexed_image_tests PRIVATE romulus::data)
add_test(NAME romulus_indexed_image_tests COMMAND romulus_indexed_image_tests)

add_executable(romulus_image_export_tests data/image_export_tests.cpp)
target_link_libraries(romulus_image_export_tests PRIVATE romulus::data)
add_test(NAME romulus_image_export_tests COMMAND romulus_image_export_tests)

add_executable(romulus_viewer_tests platform/viewer_tests.cpp)
target_link_libraries(romulus_viewer_tests PRIVATE romulus::platform)
add_test(NAME romulus_viewer_tests COMMAND romulus_viewer_tests)
