add_executable(romulus_timestep_tests core/timestep_tests.cpp)
target_link_libraries(romulus_timestep_tests PRIVATE romulus::core)
add_test(NAME romulus_timestep_tests COMMAND romulus_timestep_tests)

add_executable(romulus_data_root_tests data/data_root_tests.cpp)
target_link_libraries(romulus_data_root_tests PRIVATE romulus::data)
add_test(NAME romulus_data_root_tests COMMAND romulus_data_root_tests)

add_executable(romulus_file_inventory_tests data/file_inventory_tests.cpp)
target_link_libraries(romulus_file_inventory_tests PRIVATE romulus::data)
add_test(NAME romulus_file_inventory_tests COMMAND romulus_file_inventory_tests)

add_executable(romulus_binary_reader_tests data/binary_reader_tests.cpp)
target_link_libraries(romulus_binary_reader_tests PRIVATE romulus::data)
add_test(NAME romulus_binary_reader_tests COMMAND romulus_binary_reader_tests)

add_executable(romulus_file_loader_tests data/file_loader_tests.cpp)
add_executable(romulus_path_resolver_tests data/path_resolver_tests.cpp)
target_link_libraries(romulus_path_resolver_tests PRIVATE romulus::data)
add_test(NAME romulus_path_resolver_tests COMMAND romulus_path_resolver_tests)

target_link_libraries(romulus_file_loader_tests PRIVATE romulus::data)
add_test(NAME romulus_file_loader_tests COMMAND romulus_file_loader_tests)

add_executable(romulus_binary_probe_tests data/binary_probe_tests.cpp)
target_link_libraries(romulus_binary_probe_tests PRIVATE romulus::data)
add_test(NAME romulus_binary_probe_tests COMMAND romulus_binary_probe_tests)

add_executable(romulus_candidate_probe_tests data/candidate_probe_tests.cpp)
target_link_libraries(romulus_candidate_probe_tests PRIVATE romulus::data)
add_test(NAME romulus_candidate_probe_tests COMMAND romulus_candidate_probe_tests)

add_executable(romulus_palette_tests data/palette_tests.cpp)
target_link_libraries(romulus_palette_tests PRIVATE romulus::data)
add_test(NAME romulus_palette_tests COMMAND romulus_palette_tests)

add_executable(romulus_indexed_image_tests data/indexed_image_tests.cpp)
target_link_libraries(romulus_indexed_image_tests PRIVATE romulus::data)
add_test(NAME romulus_indexed_image_tests COMMAND romulus_indexed_image_tests)

add_executable(romulus_image_export_tests data/image_export_tests.cpp)
target_link_libraries(romulus_image_export_tests PRIVATE romulus::data)
add_test(NAME romulus_image_export_tests COMMAND romulus_image_export_tests)

add_executable(romulus_viewer_tests platform/viewer_tests.cpp)
target_link_libraries(romulus_viewer_tests PRIVATE romulus::platform)
add_test(NAME romulus_viewer_tests COMMAND romulus_viewer_tests)

add_executable(romulus_bootstrap_tests platform/bootstrap_tests.cpp)
target_link_libraries(romulus_bootstrap_tests PRIVATE romulus::platform)
add_test(NAME romulus_bootstrap_tests COMMAND romulus_bootstrap_tests)

add_executable(romulus_forum_composition_tests platform/forum_composition_tests.cpp)
target_link_libraries(romulus_forum_composition_tests PRIVATE romulus::platform)
add_test(NAME romulus_forum_composition_tests COMMAND romulus_forum_composition_tests)

add_executable(romulus_map_resource_tests data/map_resource_tests.cpp)
target_link_libraries(romulus_map_resource_tests PRIVATE romulus::data)
add_test(NAME romulus_map_resource_tests COMMAND romulus_map_resource_tests)

add_executable(romulus_ilbm_image_tests data/ilbm_image_tests.cpp)
target_link_libraries(romulus_ilbm_image_tests PRIVATE romulus::data)
add_test(NAME romulus_ilbm_image_tests COMMAND romulus_ilbm_image_tests)

add_executable(romulus_pl8_resource_tests data/pl8_resource_tests.cpp)
target_link_libraries(romulus_pl8_resource_tests PRIVATE romulus::data)
add_test(NAME romulus_pl8_resource_tests COMMAND romulus_pl8_resource_tests)

add_executable(romulus_pl8_image_resource_tests data/pl8_image_resource_tests.cpp)
target_link_libraries(romulus_pl8_image_resource_tests PRIVATE romulus::data)
add_test(NAME romulus_pl8_image_resource_tests COMMAND romulus_pl8_image_resource_tests)

add_executable(romulus_pl8_sprite_table_resource_tests data/pl8_sprite_table_resource_tests.cpp)
target_link_libraries(romulus_pl8_sprite_table_resource_tests PRIVATE romulus::data)
add_test(NAME romulus_pl8_sprite_table_resource_tests COMMAND romulus_pl8_sprite_table_resource_tests)

add_executable(romulus_image256_resource_tests data/image256_resource_tests.cpp)
target_link_libraries(romulus_image256_resource_tests PRIVATE romulus::data)
add_test(NAME romulus_image256_resource_tests COMMAND romulus_image256_resource_tests)

add_executable(romulus_pe_exe_resource_tests data/pe_exe_resource_tests.cpp)
target_link_libraries(romulus_pe_exe_resource_tests PRIVATE romulus::data)
add_test(NAME romulus_pe_exe_resource_tests COMMAND romulus_pe_exe_resource_tests)

add_executable(romulus_signature_registry_tests data/signature_registry_tests.cpp)
target_link_libraries(romulus_signature_registry_tests PRIVATE romulus::data)
add_test(NAME romulus_signature_registry_tests COMMAND romulus_signature_registry_tests)

add_executable(romulus_batch_classification_tests data/batch_classification_tests.cpp)
target_link_libraries(romulus_batch_classification_tests PRIVATE romulus::data)
add_test(NAME romulus_batch_classification_tests COMMAND romulus_batch_classification_tests)

add_executable(romulus_win95_data_probe_tests data/win95_data_probe_tests.cpp)
target_link_libraries(romulus_win95_data_probe_tests PRIVATE romulus::data)
add_test(NAME romulus_win95_data_probe_tests COMMAND romulus_win95_data_probe_tests)

add_executable(romulus_win95_data_container_tests data/win95_data_container_tests.cpp)
target_link_libraries(romulus_win95_data_container_tests PRIVATE romulus::data)
add_test(NAME romulus_win95_data_container_tests COMMAND romulus_win95_data_container_tests)

add_executable(romulus_startup_tests platform/startup_tests.cpp)
target_link_libraries(romulus_startup_tests PRIVATE romulus::platform)
add_test(NAME romulus_startup_tests COMMAND romulus_startup_tests)
